feat: Add GuideProgress component with live progress tracking
New Features:
- GuideProgress component with Tailwind styling
  - Shows completed/total tasks counter
  - Animated progress bar (0-100%)
  - Real-time updates via localStorage polling
  - Cross-tab sync via storage events
  - Dark mode support

Integration:
- Added to MDX provider (mdx.tsx)
- Integrated in all How-To guides:
  - create-case.mdx (8 tasks)
  - review-publish.mdx (6 tasks)
  - assets.mdx (5 tasks)

Usage:
<GuideProgress ns="howto-create-case" total={8} />

Benefits:
- Visual feedback for guide completion
- Persistent progress across sessions
- Motivates users to complete guides
- Works seamlessly with existing Checklist component

--- a/src/docs/pages/how-to/assets.mdx
+++ b/src/docs/pages/how-to/assets.mdx
@@ -2,6 +2,16 @@
 
 So organisierst du Bilder/Videos für Cases.
 
+<GuideProgress ns="howto-assets" total={5} />
+
+<Checklist ns="howto-assets" title="Assets Checkliste">
+  <CheckItem id="naming">Naming-Schema prüfen (<code>/assets/cases/&lt;slug&gt;-hero.jpg</code>)</CheckItem>
+  <CheckItem id="upload">Bilder/Videos in <code>/public/assets/</code> hochladen</CheckItem>
+  <CheckItem id="paths">Pfade im Case-Drawer eintragen (heroImage/heroMedia)</CheckItem>
+  <CheckItem id="og">OG-Images generieren (<code>npm run generate:og</code>)</CheckItem>
+  <CheckItem id="verify">Assets im Browser testen</CheckItem>
+</Checklist>
+
 ## Pfade & Formate
 
 - **Bilder**: `/assets/...` (`.jpg`, `.jpeg`, `.png`, `.webp`)
@@ -206,6 +216,7 @@ cwebp -q 80 input.jpg -o output.webp
 - [Case anlegen](/docs/how-to/create-case) - Neuen Case mit Assets erstellen
 - [Review & Publish](/docs/how-to/review-publish) - Case freigeben
 - [Content Model](/docs/content-model) - Datenstruktur verstehen
+
 
 
 
