--- a/src/docs/pages/how-to/create-case.mdx
+++ b/src/docs/pages/how-to/create-case.mdx
@@ -2,6 +2,19 @@
 
 Dieser Guide zeigt, wie du einen neuen **Case** im Admin-Dashboard erstellst.
 
+<GuideProgress ns="howto-create-case" total={8} />
+
+<Checklist ns="howto-create-case" title="Checkliste">
+  <CheckItem id="slug">Slug vergeben (nur <code>a-z0-9-</code>)</CheckItem>
+  <CheckItem id="titles">Titel (DE/EN) und optional Untertitel setzen</CheckItem>
+  <CheckItem id="taxonomy">Kategorie &amp; Branche wählen</CheckItem>
+  <CheckItem id="media">Hero Media Pfade (Bild/Video) prüfen</CheckItem>
+  <CheckItem id="lists">Goals / Solution / Results pflegen</CheckItem>
+  <CheckItem id="tech">Tech-Tags ergänzen</CheckItem>
+  <CheckItem id="quote">Zitat (optional) mit Autor</CheckItem>
+  <CheckItem id="save">Speichern und Validierungsfehler prüfen</CheckItem>
+</Checklist>
+
 ## Schritte
 
 1. **Neuer Case** → Button in der Topbar klicken.
@@ -67,6 +80,7 @@ Dieser Guide zeigt, wie du einen neuen **Case** im Admin-Dashboard erstellst.
 - [Review & Publish](/docs/how-to/review-publish) - Case freigeben und veröffentlichen
 - [Assets & Medien](/docs/how-to/assets) - Bilder und Videos hinzufügen
 - [Admin Dashboard](/docs/admin) - Vollständige Dashboard-Dokumentation
+
 
 
 
