--- a/src/docs/pages/how-to/review-publish.mdx
+++ b/src/docs/pages/how-to/review-publish.mdx
@@ -4,6 +4,17 @@ import Mermaid from "../../../components/Mermaid";
 
 So läuft der Freigabeprozess inkl. Rollen & Statuswechsel.
 
+<GuideProgress ns="howto-review-publish" total={6} />
+
+<Checklist ns="howto-review-publish" title="Review & Publish Checkliste">
+  <CheckItem id="owner">Owner im Drawer setzen</CheckItem>
+  <CheckItem id="reviewers">Reviewer zuweisen</CheckItem>
+  <CheckItem id="submit">„Zur Prüfung" senden</CheckItem>
+  <CheckItem id="review">Review durchführen (Freigeben/Ablehnen)</CheckItem>
+  <CheckItem id="publish">Veröffentlichen (Status → Published)</CheckItem>
+  <CheckItem id="verify">Veröffentlichungsdatum prüfen</CheckItem>
+</Checklist>
+
 ## Rollen
 
 - **Admin** – alle Rechte (inkl. „Entwurf" zurücksetzen)
@@ -95,6 +106,7 @@ So läuft der Freigabeprozess inkl. Rollen & Statuswechsel.
 - [Case anlegen](/docs/how-to/create-case) - Neuen Case erstellen
 - [Assets & Medien](/docs/how-to/assets) - Bilder und Videos hinzufügen
 - [CMS Workflow](/docs/cms-workflow) - Detaillierte Workflow-Dokumentation
+
 
 
 
